--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,7 +84,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+<!--		import excel-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
