--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "antd": "^6.2.3",
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
